--- a/src/components/main/Portfolio.css
+++ b/src/components/main/Portfolio.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #f5f5f5;
+    height: 89.5vh;
+    background-color: #02001e;
 }
 .main-page #name{
     color:aliceblue
@@ -16,4 +16,7 @@
 }
 .main-page #typewriter{
     margin-top: -10px;
+}
+.main-page #typewriter .typewriter-front{
+    color: #fff4f4;
 }
