--- a/src/components/navbar/navbar/Navbar.css
+++ b/src/components/navbar/navbar/Navbar.css
@@ -3,8 +3,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #3c8ce776;
-    padding: 5px;
+    background-color: #0d1930;
+    
   }
   
   .navbar-name {
@@ -29,11 +29,31 @@
   }
   
   .navbar-links a {
-    color: #fff;
+    color: #ceb7b7;
+    font-size: large;
     text-decoration: none;
   }
   
-  .navbar-links a:hover {
-    color: #ddd;
+  .nav-item a::after {
+    content: "";
+    display: block;
+    width:0 ;
+    height: 2px;
+    background: #e2ff08;
+    transition: width .3s;
   }
+  .nav-item a:hover::after{
+    width: 100%;
+
+    
+  }
+  .nav-item a:hover{
+    font-size: larger;
+    transition: ease-in-out;
+  }
+
+  
+ 
+ 
+
   
